--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -3,5 +3,23 @@
   display: flex;
   justify-content: space-between;
   alig-items: center;
-  backgroun-color: ;
+}
+
+.logo {
+  font-weight: bold;
+  font-size: 22px;
+}
+.links {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.button {
+  padding: 5px;
+  border: none;
+  background-color: #53c28b;
+  color: white;
+  cursor: pointer;
+  border-radius: 3px;
 }
