--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -2,7 +2,7 @@
   height: 100px;
   display: flex;
   justify-content: space-between;
-  alig-items: center;
+  align-items: center;
 }
 
 .logo {
@@ -13,13 +13,4 @@
   display: flex;
   align-items: center;
   gap: 20px;
-}
-
-.button {
-  padding: 5px;
-  border: none;
-  background-color: #53c28b;
-  color: white;
-  cursor: pointer;
-  border-radius: 3px;
 }
